//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  drugs Drug [not null]
  role Role [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Drug {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  dosage String [not null]
  unit String [not null]
  frequency Int [not null]
  frequencyUnit FrequencyUnit [not null]
  startDate DateTime [not null]
  endDate DateTime
  isActive Boolean [not null, default: true]
  userId String [not null]
  user User [not null]
  schedules DrugSchedule [not null]
}

Table DrugSchedule {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  drugId String [not null]
  drug Drug [not null]
  time String [not null]
  dosage String [not null]
  taken Boolean [not null, default: false]
  takenAt DateTime
  notes String
}

Enum Role {
  ADMIN
  USER
}

Enum FrequencyUnit {
  HOURS
  DAYS
  WEEKS
}

Ref: Post.authorId > User.id

Ref: Drug.userId > User.id [delete: Cascade]

Ref: DrugSchedule.drugId > Drug.id [delete: Cascade]